{
    "name": "CustomInput",
    "maps": [
        {
            "name": "Player",
            "id": "77af5b7c-78d5-4d78-bc44-a0cf6401aaca",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "30efb64c-0360-4c8a-9308-b848fdd7f415",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "ca98eef2-18fb-48f2-8352-c42c04500efc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RangeAttack",
                    "type": "Button",
                    "id": "28ff76f3-7143-4f7f-8f49-dcfa392c7cb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "4420315f-a05a-41f2-9d6c-ea1dcfe45328",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShopInteraction",
                    "type": "Button",
                    "id": "72b640af-ddf1-4aad-8dfb-e1935ea6d6d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2c37904f-7927-42f4-8a82-587624427bde",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c68a1489-61aa-4947-bb5d-49971c17e378",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "13c187d0-ebcf-4289-82ac-500b70c0bf08",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "22b4818c-8cfc-4697-8dd5-dadd692e6474",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1d06a0b2-a695-44ca-8e2f-f6cc33a166c5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1e7ac474-2c5f-495c-9d5b-5feef22932a9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28b1b7d9-ec98-439f-a8db-7bf6672cd080",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RangeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "794abd2f-ac57-448e-a9ae-6695c734f6cd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51955c4b-3c81-49f4-aea2-8dfc1b75e5a9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShopInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}